filter/y.output

state 0
	$accept: .start $end 

	error  shift 3
	START_WHERE_CONDITION  shift 2
	.  error

	start  goto 1

state 1
	$accept:  start.$end 
	start:  start.EOF 

	$end  accept
	EOF  shift 4
	.  error


state 2
	start:  START_WHERE_CONDITION.stmts 
	where_conditions: .    (47)

	LEFT_BRACE  shift 7
	.  reduce 47 (src line 282)

	stmts  goto 5
	where_conditions  goto 6

state 3
	start:  error.    (3)

	.  reduce 3 (src line 106)


state 4
	start:  start EOF.    (2)

	.  reduce 2 (src line 105)


state 5
	start:  START_WHERE_CONDITION stmts.    (1)
	stmts:  stmts.SEMICOLON where_conditions 

	SEMICOLON  shift 8
	.  reduce 1 (src line 101)


state 6
	stmts:  where_conditions.    (4)

	.  reduce 4 (src line 112)


state 7
	where_conditions:  LEFT_BRACE.filter_list RIGHT_BRACE 
	filter_list: .    (51)

	ID  shift 29
	LEFT_PAREN  shift 15
	NUMBER  shift 32
	STRING  shift 34
	QUOTED_STRING  shift 30
	ADD  shift 40
	MUL  shift 39
	SUB  shift 41
	TRUE  shift 37
	FALSE  shift 38
	IDENTIFIER  shift 31
	NIL  shift 35
	NULL  shift 36
	RE  shift 27
	.  reduce 51 (src line 298)

	unary_op  goto 33
	function_name  goto 28
	identifier  goto 20
	filter_list  goto 9
	array_elem  goto 16
	attr_expr  goto 21
	binary_expr  goto 11
	expr  goto 13
	function_expr  goto 18
	paren_expr  goto 12
	filter_elem  goto 10
	regex  goto 17
	columnref  goto 14
	bool_literal  goto 25
	string_literal  goto 23
	nil_literal  goto 24
	number_literal  goto 22
	cascade_functions  goto 19
	star  goto 26

state 8
	stmts:  stmts SEMICOLON.where_conditions 
	where_conditions: .    (47)

	LEFT_BRACE  shift 7
	.  reduce 47 (src line 282)

	where_conditions  goto 42

state 9
	where_conditions:  LEFT_BRACE filter_list.RIGHT_BRACE 
	filter_list:  filter_list.COMMA filter_elem 
	filter_list:  filter_list.COMMA 

	COMMA  shift 44
	RIGHT_BRACE  shift 43
	.  error


state 10
	filter_list:  filter_elem.    (48)

	.  reduce 48 (src line 289)


state 11
	expr:  binary_expr.    (10)
	filter_elem:  binary_expr.    (52)

	COMMA  reduce 52 (src line 302)
	RIGHT_BRACE  reduce 52 (src line 302)
	.  reduce 10 (src line 129)


state 12
	expr:  paren_expr.    (8)
	filter_elem:  paren_expr.    (53)

	COMMA  reduce 53 (src line 302)
	RIGHT_BRACE  reduce 53 (src line 302)
	.  reduce 8 (src line 129)


state 13
	binary_expr:  expr.ADD expr 
	binary_expr:  expr.DIV expr 
	binary_expr:  expr.GTE expr 
	binary_expr:  expr.GT expr 
	binary_expr:  expr.AND expr 
	binary_expr:  expr.OR expr 
	binary_expr:  expr.LT expr 
	binary_expr:  expr.LTE expr 
	binary_expr:  expr.MOD expr 
	binary_expr:  expr.MUL expr 
	binary_expr:  expr.NEQ expr 
	binary_expr:  expr.POW expr 
	binary_expr:  expr.SUB expr 
	binary_expr:  expr.EQ expr 

	EQ  shift 58
	ADD  shift 45
	DIV  shift 46
	GTE  shift 47
	GT  shift 48
	LT  shift 51
	LTE  shift 52
	MOD  shift 53
	MUL  shift 54
	NEQ  shift 55
	POW  shift 56
	SUB  shift 57
	AND  shift 49
	OR  shift 50
	.  error


state 14
	array_elem:  columnref.    (36)
	binary_expr:  columnref.IN LEFT_BRACKET array_list RIGHT_BRACKET 
	binary_expr:  columnref.NOT_IN LEFT_BRACKET array_list RIGHT_BRACKET 
	binary_expr:  columnref.MATCH LEFT_BRACKET array_list RIGHT_BRACKET 
	binary_expr:  columnref.NOT_MATCH LEFT_BRACKET array_list RIGHT_BRACKET 

	MATCH  shift 61
	NOT_MATCH  shift 62
	IN  shift 59
	NOT_IN  shift 60
	.  reduce 36 (src line 245)


state 15
	paren_expr:  LEFT_PAREN.expr RIGHT_PAREN 

	ID  shift 29
	LEFT_PAREN  shift 15
	NUMBER  shift 32
	STRING  shift 34
	QUOTED_STRING  shift 30
	ADD  shift 40
	MUL  shift 39
	SUB  shift 41
	TRUE  shift 37
	FALSE  shift 38
	IDENTIFIER  shift 31
	NIL  shift 35
	NULL  shift 36
	RE  shift 27
	.  error

	unary_op  goto 33
	function_name  goto 28
	identifier  goto 20
	array_elem  goto 16
	attr_expr  goto 21
	binary_expr  goto 65
	expr  goto 63
	function_expr  goto 18
	paren_expr  goto 64
	regex  goto 17
	columnref  goto 14
	bool_literal  goto 25
	string_literal  goto 23
	nil_literal  goto 24
	number_literal  goto 22
	cascade_functions  goto 19
	star  goto 26

state 16
	expr:  array_elem.    (6)

	.  reduce 6 (src line 129)


state 17
	expr:  regex.    (7)

	.  reduce 7 (src line 129)


state 18
	expr:  function_expr.    (9)
	cascade_functions:  function_expr.DOT function_expr 

	DOT  shift 66
	.  reduce 9 (src line 129)


state 19
	expr:  cascade_functions.    (11)
	cascade_functions:  cascade_functions.DOT function_expr 

	DOT  shift 67
	.  reduce 11 (src line 129)


state 20
	columnref:  identifier.    (12)
	attr_expr:  identifier.DOT identifier 
	function_name:  identifier.    (72)

	LEFT_PAREN  reduce 72 (src line 408)
	DOT  shift 68
	.  reduce 12 (src line 132)


state 21
	columnref:  attr_expr.    (13)
	attr_expr:  attr_expr.DOT identifier 
	function_name:  attr_expr.    (73)

	LEFT_PAREN  reduce 73 (src line 412)
	DOT  shift 69
	.  reduce 13 (src line 136)


state 22
	array_elem:  number_literal.    (34)

	.  reduce 34 (src line 243)


state 23
	array_elem:  string_literal.    (35)

	.  reduce 35 (src line 244)


state 24
	array_elem:  nil_literal.    (37)

	.  reduce 37 (src line 246)


state 25
	array_elem:  bool_literal.    (38)

	.  reduce 38 (src line 247)


state 26
	array_elem:  star.    (39)

	.  reduce 39 (src line 248)


state 27
	regex:  RE.LEFT_PAREN string_literal RIGHT_PAREN 
	regex:  RE.LEFT_PAREN QUOTED_STRING RIGHT_PAREN 

	LEFT_PAREN  shift 70
	.  error


state 28
	function_expr:  function_name.LEFT_PAREN function_args RIGHT_PAREN 

	LEFT_PAREN  shift 71
	.  error


state 29
	identifier:  ID.    (78)

	.  reduce 78 (src line 449)


state 30
	identifier:  QUOTED_STRING.    (79)

	.  reduce 79 (src line 450)


state 31
	identifier:  IDENTIFIER.LEFT_PAREN string_literal RIGHT_PAREN 

	LEFT_PAREN  shift 72
	.  error


state 32
	number_literal:  NUMBER.    (74)

	.  reduce 74 (src line 419)


state 33
	number_literal:  unary_op.NUMBER 

	NUMBER  shift 73
	.  error


state 34
	string_literal:  STRING.    (18)

	.  reduce 18 (src line 162)


state 35
	nil_literal:  NIL.    (19)

	.  reduce 19 (src line 168)


state 36
	nil_literal:  NULL.    (20)

	.  reduce 20 (src line 172)


state 37
	bool_literal:  TRUE.    (21)

	.  reduce 21 (src line 178)


state 38
	bool_literal:  FALSE.    (22)

	.  reduce 22 (src line 182)


state 39
	star:  MUL.    (40)

	.  reduce 40 (src line 251)


state 40
	unary_op:  ADD.    (16)

	.  reduce 16 (src line 158)


state 41
	unary_op:  SUB.    (17)

	.  reduce 17 (src line 159)


state 42
	stmts:  stmts SEMICOLON where_conditions.    (5)

	.  reduce 5 (src line 116)


state 43
	where_conditions:  LEFT_BRACE filter_list RIGHT_BRACE.    (46)

	.  reduce 46 (src line 278)


state 44
	filter_list:  filter_list COMMA.filter_elem 
	filter_list:  filter_list COMMA.    (50)

	ID  shift 29
	LEFT_PAREN  shift 15
	NUMBER  shift 32
	STRING  shift 34
	QUOTED_STRING  shift 30
	ADD  shift 40
	MUL  shift 39
	SUB  shift 41
	TRUE  shift 37
	FALSE  shift 38
	IDENTIFIER  shift 31
	NIL  shift 35
	NULL  shift 36
	RE  shift 27
	.  reduce 50 (src line 297)

	unary_op  goto 33
	function_name  goto 28
	identifier  goto 20
	array_elem  goto 16
	attr_expr  goto 21
	binary_expr  goto 11
	expr  goto 13
	function_expr  goto 18
	paren_expr  goto 12
	filter_elem  goto 74
	regex  goto 17
	columnref  goto 14
	bool_literal  goto 25
	string_literal  goto 23
	nil_literal  goto 24
	number_literal  goto 22
	cascade_functions  goto 19
	star  goto 26

state 45
	binary_expr:  expr ADD.expr 

	ID  shift 29
	LEFT_PAREN  shift 15
	NUMBER  shift 32
	STRING  shift 34
	QUOTED_STRING  shift 30
	ADD  shift 40
	MUL  shift 39
	SUB  shift 41
	TRUE  shift 37
	FALSE  shift 38
	IDENTIFIER  shift 31
	NIL  shift 35
	NULL  shift 36
	RE  shift 27
	.  error

	unary_op  goto 33
	function_name  goto 28
	identifier  goto 20
	array_elem  goto 16
	attr_expr  goto 21
	binary_expr  goto 65
	expr  goto 75
	function_expr  goto 18
	paren_expr  goto 64
	regex  goto 17
	columnref  goto 14
	bool_literal  goto 25
	string_literal  goto 23
	nil_literal  goto 24
	number_literal  goto 22
	cascade_functions  goto 19
	star  goto 26

state 46
	binary_expr:  expr DIV.expr 

	ID  shift 29
	LEFT_PAREN  shift 15
	NUMBER  shift 32
	STRING  shift 34
	QUOTED_STRING  shift 30
	ADD  shift 40
	MUL  shift 39
	SUB  shift 41
	TRUE  shift 37
	FALSE  shift 38
	IDENTIFIER  shift 31
	NIL  shift 35
	NULL  shift 36
	RE  shift 27
	.  error

	unary_op  goto 33
	function_name  goto 28
	identifier  goto 20
	array_elem  goto 16
	attr_expr  goto 21
	binary_expr  goto 65
	expr  goto 76
	function_expr  goto 18
	paren_expr  goto 64
	regex  goto 17
	columnref  goto 14
	bool_literal  goto 25
	string_literal  goto 23
	nil_literal  goto 24
	number_literal  goto 22
	cascade_functions  goto 19
	star  goto 26

state 47
	binary_expr:  expr GTE.expr 

	ID  shift 29
	LEFT_PAREN  shift 15
	NUMBER  shift 32
	STRING  shift 34
	QUOTED_STRING  shift 30
	ADD  shift 40
	MUL  shift 39
	SUB  shift 41
	TRUE  shift 37
	FALSE  shift 38
	IDENTIFIER  shift 31
	NIL  shift 35
	NULL  shift 36
	RE  shift 27
	.  error

	unary_op  goto 33
	function_name  goto 28
	identifier  goto 20
	array_elem  goto 16
	attr_expr  goto 21
	binary_expr  goto 65
	expr  goto 77
	function_expr  goto 18
	paren_expr  goto 64
	regex  goto 17
	columnref  goto 14
	bool_literal  goto 25
	string_literal  goto 23
	nil_literal  goto 24
	number_literal  goto 22
	cascade_functions  goto 19
	star  goto 26

state 48
	binary_expr:  expr GT.expr 

	ID  shift 29
	LEFT_PAREN  shift 15
	NUMBER  shift 32
	STRING  shift 34
	QUOTED_STRING  shift 30
	ADD  shift 40
	MUL  shift 39
	SUB  shift 41
	TRUE  shift 37
	FALSE  shift 38
	IDENTIFIER  shift 31
	NIL  shift 35
	NULL  shift 36
	RE  shift 27
	.  error

	unary_op  goto 33
	function_name  goto 28
	identifier  goto 20
	array_elem  goto 16
	attr_expr  goto 21
	binary_expr  goto 65
	expr  goto 78
	function_expr  goto 18
	paren_expr  goto 64
	regex  goto 17
	columnref  goto 14
	bool_literal  goto 25
	string_literal  goto 23
	nil_literal  goto 24
	number_literal  goto 22
	cascade_functions  goto 19
	star  goto 26

state 49
	binary_expr:  expr AND.expr 

	ID  shift 29
	LEFT_PAREN  shift 15
	NUMBER  shift 32
	STRING  shift 34
	QUOTED_STRING  shift 30
	ADD  shift 40
	MUL  shift 39
	SUB  shift 41
	TRUE  shift 37
	FALSE  shift 38
	IDENTIFIER  shift 31
	NIL  shift 35
	NULL  shift 36
	RE  shift 27
	.  error

	unary_op  goto 33
	function_name  goto 28
	identifier  goto 20
	array_elem  goto 16
	attr_expr  goto 21
	binary_expr  goto 65
	expr  goto 79
	function_expr  goto 18
	paren_expr  goto 64
	regex  goto 17
	columnref  goto 14
	bool_literal  goto 25
	string_literal  goto 23
	nil_literal  goto 24
	number_literal  goto 22
	cascade_functions  goto 19
	star  goto 26

state 50
	binary_expr:  expr OR.expr 

	ID  shift 29
	LEFT_PAREN  shift 15
	NUMBER  shift 32
	STRING  shift 34
	QUOTED_STRING  shift 30
	ADD  shift 40
	MUL  shift 39
	SUB  shift 41
	TRUE  shift 37
	FALSE  shift 38
	IDENTIFIER  shift 31
	NIL  shift 35
	NULL  shift 36
	RE  shift 27
	.  error

	unary_op  goto 33
	function_name  goto 28
	identifier  goto 20
	array_elem  goto 16
	attr_expr  goto 21
	binary_expr  goto 65
	expr  goto 80
	function_expr  goto 18
	paren_expr  goto 64
	regex  goto 17
	columnref  goto 14
	bool_literal  goto 25
	string_literal  goto 23
	nil_literal  goto 24
	number_literal  goto 22
	cascade_functions  goto 19
	star  goto 26

state 51
	binary_expr:  expr LT.expr 

	ID  shift 29
	LEFT_PAREN  shift 15
	NUMBER  shift 32
	STRING  shift 34
	QUOTED_STRING  shift 30
	ADD  shift 40
	MUL  shift 39
	SUB  shift 41
	TRUE  shift 37
	FALSE  shift 38
	IDENTIFIER  shift 31
	NIL  shift 35
	NULL  shift 36
	RE  shift 27
	.  error

	unary_op  goto 33
	function_name  goto 28
	identifier  goto 20
	array_elem  goto 16
	attr_expr  goto 21
	binary_expr  goto 65
	expr  goto 81
	function_expr  goto 18
	paren_expr  goto 64
	regex  goto 17
	columnref  goto 14
	bool_literal  goto 25
	string_literal  goto 23
	nil_literal  goto 24
	number_literal  goto 22
	cascade_functions  goto 19
	star  goto 26

state 52
	binary_expr:  expr LTE.expr 

	ID  shift 29
	LEFT_PAREN  shift 15
	NUMBER  shift 32
	STRING  shift 34
	QUOTED_STRING  shift 30
	ADD  shift 40
	MUL  shift 39
	SUB  shift 41
	TRUE  shift 37
	FALSE  shift 38
	IDENTIFIER  shift 31
	NIL  shift 35
	NULL  shift 36
	RE  shift 27
	.  error

	unary_op  goto 33
	function_name  goto 28
	identifier  goto 20
	array_elem  goto 16
	attr_expr  goto 21
	binary_expr  goto 65
	expr  goto 82
	function_expr  goto 18
	paren_expr  goto 64
	regex  goto 17
	columnref  goto 14
	bool_literal  goto 25
	string_literal  goto 23
	nil_literal  goto 24
	number_literal  goto 22
	cascade_functions  goto 19
	star  goto 26

state 53
	binary_expr:  expr MOD.expr 

	ID  shift 29
	LEFT_PAREN  shift 15
	NUMBER  shift 32
	STRING  shift 34
	QUOTED_STRING  shift 30
	ADD  shift 40
	MUL  shift 39
	SUB  shift 41
	TRUE  shift 37
	FALSE  shift 38
	IDENTIFIER  shift 31
	NIL  shift 35
	NULL  shift 36
	RE  shift 27
	.  error

	unary_op  goto 33
	function_name  goto 28
	identifier  goto 20
	array_elem  goto 16
	attr_expr  goto 21
	binary_expr  goto 65
	expr  goto 83
	function_expr  goto 18
	paren_expr  goto 64
	regex  goto 17
	columnref  goto 14
	bool_literal  goto 25
	string_literal  goto 23
	nil_literal  goto 24
	number_literal  goto 22
	cascade_functions  goto 19
	star  goto 26

state 54
	binary_expr:  expr MUL.expr 

	ID  shift 29
	LEFT_PAREN  shift 15
	NUMBER  shift 32
	STRING  shift 34
	QUOTED_STRING  shift 30
	ADD  shift 40
	MUL  shift 39
	SUB  shift 41
	TRUE  shift 37
	FALSE  shift 38
	IDENTIFIER  shift 31
	NIL  shift 35
	NULL  shift 36
	RE  shift 27
	.  error

	unary_op  goto 33
	function_name  goto 28
	identifier  goto 20
	array_elem  goto 16
	attr_expr  goto 21
	binary_expr  goto 65
	expr  goto 84
	function_expr  goto 18
	paren_expr  goto 64
	regex  goto 17
	columnref  goto 14
	bool_literal  goto 25
	string_literal  goto 23
	nil_literal  goto 24
	number_literal  goto 22
	cascade_functions  goto 19
	star  goto 26

state 55
	binary_expr:  expr NEQ.expr 

	ID  shift 29
	LEFT_PAREN  shift 15
	NUMBER  shift 32
	STRING  shift 34
	QUOTED_STRING  shift 30
	ADD  shift 40
	MUL  shift 39
	SUB  shift 41
	TRUE  shift 37
	FALSE  shift 38
	IDENTIFIER  shift 31
	NIL  shift 35
	NULL  shift 36
	RE  shift 27
	.  error

	unary_op  goto 33
	function_name  goto 28
	identifier  goto 20
	array_elem  goto 16
	attr_expr  goto 21
	binary_expr  goto 65
	expr  goto 85
	function_expr  goto 18
	paren_expr  goto 64
	regex  goto 17
	columnref  goto 14
	bool_literal  goto 25
	string_literal  goto 23
	nil_literal  goto 24
	number_literal  goto 22
	cascade_functions  goto 19
	star  goto 26

state 56
	binary_expr:  expr POW.expr 

	ID  shift 29
	LEFT_PAREN  shift 15
	NUMBER  shift 32
	STRING  shift 34
	QUOTED_STRING  shift 30
	ADD  shift 40
	MUL  shift 39
	SUB  shift 41
	TRUE  shift 37
	FALSE  shift 38
	IDENTIFIER  shift 31
	NIL  shift 35
	NULL  shift 36
	RE  shift 27
	.  error

	unary_op  goto 33
	function_name  goto 28
	identifier  goto 20
	array_elem  goto 16
	attr_expr  goto 21
	binary_expr  goto 65
	expr  goto 86
	function_expr  goto 18
	paren_expr  goto 64
	regex  goto 17
	columnref  goto 14
	bool_literal  goto 25
	string_literal  goto 23
	nil_literal  goto 24
	number_literal  goto 22
	cascade_functions  goto 19
	star  goto 26

state 57
	binary_expr:  expr SUB.expr 

	ID  shift 29
	LEFT_PAREN  shift 15
	NUMBER  shift 32
	STRING  shift 34
	QUOTED_STRING  shift 30
	ADD  shift 40
	MUL  shift 39
	SUB  shift 41
	TRUE  shift 37
	FALSE  shift 38
	IDENTIFIER  shift 31
	NIL  shift 35
	NULL  shift 36
	RE  shift 27
	.  error

	unary_op  goto 33
	function_name  goto 28
	identifier  goto 20
	array_elem  goto 16
	attr_expr  goto 21
	binary_expr  goto 65
	expr  goto 87
	function_expr  goto 18
	paren_expr  goto 64
	regex  goto 17
	columnref  goto 14
	bool_literal  goto 25
	string_literal  goto 23
	nil_literal  goto 24
	number_literal  goto 22
	cascade_functions  goto 19
	star  goto 26

state 58
	binary_expr:  expr EQ.expr 

	ID  shift 29
	LEFT_PAREN  shift 15
	NUMBER  shift 32
	STRING  shift 34
	QUOTED_STRING  shift 30
	ADD  shift 40
	MUL  shift 39
	SUB  shift 41
	TRUE  shift 37
	FALSE  shift 38
	IDENTIFIER  shift 31
	NIL  shift 35
	NULL  shift 36
	RE  shift 27
	.  error

	unary_op  goto 33
	function_name  goto 28
	identifier  goto 20
	array_elem  goto 16
	attr_expr  goto 21
	binary_expr  goto 65
	expr  goto 88
	function_expr  goto 18
	paren_expr  goto 64
	regex  goto 17
	columnref  goto 14
	bool_literal  goto 25
	string_literal  goto 23
	nil_literal  goto 24
	number_literal  goto 22
	cascade_functions  goto 19
	star  goto 26

state 59
	binary_expr:  columnref IN.LEFT_BRACKET array_list RIGHT_BRACKET 

	LEFT_BRACKET  shift 89
	.  error


state 60
	binary_expr:  columnref NOT_IN.LEFT_BRACKET array_list RIGHT_BRACKET 

	LEFT_BRACKET  shift 90
	.  error


state 61
	binary_expr:  columnref MATCH.LEFT_BRACKET array_list RIGHT_BRACKET 

	LEFT_BRACKET  shift 91
	.  error


state 62
	binary_expr:  columnref NOT_MATCH.LEFT_BRACKET array_list RIGHT_BRACKET 

	LEFT_BRACKET  shift 92
	.  error


state 63
	paren_expr:  LEFT_PAREN expr.RIGHT_PAREN 
	binary_expr:  expr.ADD expr 
	binary_expr:  expr.DIV expr 
	binary_expr:  expr.GTE expr 
	binary_expr:  expr.GT expr 
	binary_expr:  expr.AND expr 
	binary_expr:  expr.OR expr 
	binary_expr:  expr.LT expr 
	binary_expr:  expr.LTE expr 
	binary_expr:  expr.MOD expr 
	binary_expr:  expr.MUL expr 
	binary_expr:  expr.NEQ expr 
	binary_expr:  expr.POW expr 
	binary_expr:  expr.SUB expr 
	binary_expr:  expr.EQ expr 

	EQ  shift 58
	RIGHT_PAREN  shift 93
	ADD  shift 45
	DIV  shift 46
	GTE  shift 47
	GT  shift 48
	LT  shift 51
	LTE  shift 52
	MOD  shift 53
	MUL  shift 54
	NEQ  shift 55
	POW  shift 56
	SUB  shift 57
	AND  shift 49
	OR  shift 50
	.  error


state 64
	expr:  paren_expr.    (8)

	.  reduce 8 (src line 129)


state 65
	expr:  binary_expr.    (10)

	.  reduce 10 (src line 129)


state 66
	cascade_functions:  function_expr DOT.function_expr 

	ID  shift 29
	QUOTED_STRING  shift 30
	IDENTIFIER  shift 31
	.  error

	function_name  goto 28
	identifier  goto 95
	attr_expr  goto 96
	function_expr  goto 94

state 67
	cascade_functions:  cascade_functions DOT.function_expr 

	ID  shift 29
	QUOTED_STRING  shift 30
	IDENTIFIER  shift 31
	.  error

	function_name  goto 28
	identifier  goto 95
	attr_expr  goto 96
	function_expr  goto 97

state 68
	attr_expr:  identifier DOT.identifier 

	ID  shift 29
	QUOTED_STRING  shift 30
	IDENTIFIER  shift 31
	.  error

	identifier  goto 98

state 69
	attr_expr:  attr_expr DOT.identifier 

	ID  shift 29
	QUOTED_STRING  shift 30
	IDENTIFIER  shift 31
	.  error

	identifier  goto 99

state 70
	regex:  RE LEFT_PAREN.string_literal RIGHT_PAREN 
	regex:  RE LEFT_PAREN.QUOTED_STRING RIGHT_PAREN 

	STRING  shift 34
	QUOTED_STRING  shift 101
	.  error

	string_literal  goto 100

state 71
	function_expr:  function_name LEFT_PAREN.function_args RIGHT_PAREN 
	function_args: .    (30)

	ID  shift 29
	LEFT_BRACKET  shift 106
	LEFT_PAREN  shift 15
	NUMBER  shift 32
	STRING  shift 34
	QUOTED_STRING  shift 30
	ADD  shift 40
	MUL  shift 39
	SUB  shift 41
	TRUE  shift 37
	FALSE  shift 38
	IDENTIFIER  shift 31
	NIL  shift 35
	NULL  shift 36
	RE  shift 27
	.  reduce 30 (src line 221)

	unary_op  goto 33
	function_name  goto 28
	identifier  goto 107
	function_args  goto 102
	array_elem  goto 16
	attr_expr  goto 21
	binary_expr  goto 65
	expr  goto 105
	function_arg  goto 103
	function_expr  goto 18
	naming_arg  goto 104
	paren_expr  goto 64
	regex  goto 17
	columnref  goto 14
	bool_literal  goto 25
	string_literal  goto 23
	nil_literal  goto 24
	number_literal  goto 22
	cascade_functions  goto 19
	star  goto 26

state 72
	identifier:  IDENTIFIER LEFT_PAREN.string_literal RIGHT_PAREN 

	STRING  shift 34
	.  error

	string_literal  goto 108

state 73
	number_literal:  unary_op NUMBER.    (75)

	.  reduce 75 (src line 423)


state 74
	filter_list:  filter_list COMMA filter_elem.    (49)

	.  reduce 49 (src line 293)


state 75
	binary_expr:  expr.ADD expr 
	binary_expr:  expr ADD expr.    (54)
	binary_expr:  expr.DIV expr 
	binary_expr:  expr.GTE expr 
	binary_expr:  expr.GT expr 
	binary_expr:  expr.AND expr 
	binary_expr:  expr.OR expr 
	binary_expr:  expr.LT expr 
	binary_expr:  expr.LTE expr 
	binary_expr:  expr.MOD expr 
	binary_expr:  expr.MUL expr 
	binary_expr:  expr.NEQ expr 
	binary_expr:  expr.POW expr 
	binary_expr:  expr.SUB expr 
	binary_expr:  expr.EQ expr 

	DIV  shift 46
	MOD  shift 53
	MUL  shift 54
	POW  shift 56
	.  reduce 54 (src line 305)


state 76
	binary_expr:  expr.ADD expr 
	binary_expr:  expr.DIV expr 
	binary_expr:  expr DIV expr.    (55)
	binary_expr:  expr.GTE expr 
	binary_expr:  expr.GT expr 
	binary_expr:  expr.AND expr 
	binary_expr:  expr.OR expr 
	binary_expr:  expr.LT expr 
	binary_expr:  expr.LTE expr 
	binary_expr:  expr.MOD expr 
	binary_expr:  expr.MUL expr 
	binary_expr:  expr.NEQ expr 
	binary_expr:  expr.POW expr 
	binary_expr:  expr.SUB expr 
	binary_expr:  expr.EQ expr 

	POW  shift 56
	.  reduce 55 (src line 309)


state 77
	binary_expr:  expr.ADD expr 
	binary_expr:  expr.DIV expr 
	binary_expr:  expr.GTE expr 
	binary_expr:  expr GTE expr.    (56)
	binary_expr:  expr.GT expr 
	binary_expr:  expr.AND expr 
	binary_expr:  expr.OR expr 
	binary_expr:  expr.LT expr 
	binary_expr:  expr.LTE expr 
	binary_expr:  expr.MOD expr 
	binary_expr:  expr.MUL expr 
	binary_expr:  expr.NEQ expr 
	binary_expr:  expr.POW expr 
	binary_expr:  expr.SUB expr 
	binary_expr:  expr.EQ expr 

	ADD  shift 45
	DIV  shift 46
	MOD  shift 53
	MUL  shift 54
	POW  shift 56
	SUB  shift 57
	.  reduce 56 (src line 313)


state 78
	binary_expr:  expr.ADD expr 
	binary_expr:  expr.DIV expr 
	binary_expr:  expr.GTE expr 
	binary_expr:  expr.GT expr 
	binary_expr:  expr GT expr.    (57)
	binary_expr:  expr.AND expr 
	binary_expr:  expr.OR expr 
	binary_expr:  expr.LT expr 
	binary_expr:  expr.LTE expr 
	binary_expr:  expr.MOD expr 
	binary_expr:  expr.MUL expr 
	binary_expr:  expr.NEQ expr 
	binary_expr:  expr.POW expr 
	binary_expr:  expr.SUB expr 
	binary_expr:  expr.EQ expr 

	ADD  shift 45
	DIV  shift 46
	MOD  shift 53
	MUL  shift 54
	POW  shift 56
	SUB  shift 57
	.  reduce 57 (src line 319)


state 79
	binary_expr:  expr.ADD expr 
	binary_expr:  expr.DIV expr 
	binary_expr:  expr.GTE expr 
	binary_expr:  expr.GT expr 
	binary_expr:  expr.AND expr 
	binary_expr:  expr AND expr.    (58)
	binary_expr:  expr.OR expr 
	binary_expr:  expr.LT expr 
	binary_expr:  expr.LTE expr 
	binary_expr:  expr.MOD expr 
	binary_expr:  expr.MUL expr 
	binary_expr:  expr.NEQ expr 
	binary_expr:  expr.POW expr 
	binary_expr:  expr.SUB expr 
	binary_expr:  expr.EQ expr 

	EQ  shift 58
	ADD  shift 45
	DIV  shift 46
	GTE  shift 47
	GT  shift 48
	LT  shift 51
	LTE  shift 52
	MOD  shift 53
	MUL  shift 54
	NEQ  shift 55
	POW  shift 56
	SUB  shift 57
	.  reduce 58 (src line 325)


state 80
	binary_expr:  expr.ADD expr 
	binary_expr:  expr.DIV expr 
	binary_expr:  expr.GTE expr 
	binary_expr:  expr.GT expr 
	binary_expr:  expr.AND expr 
	binary_expr:  expr.OR expr 
	binary_expr:  expr OR expr.    (59)
	binary_expr:  expr.LT expr 
	binary_expr:  expr.LTE expr 
	binary_expr:  expr.MOD expr 
	binary_expr:  expr.MUL expr 
	binary_expr:  expr.NEQ expr 
	binary_expr:  expr.POW expr 
	binary_expr:  expr.SUB expr 
	binary_expr:  expr.EQ expr 

	EQ  shift 58
	ADD  shift 45
	DIV  shift 46
	GTE  shift 47
	GT  shift 48
	LT  shift 51
	LTE  shift 52
	MOD  shift 53
	MUL  shift 54
	NEQ  shift 55
	POW  shift 56
	SUB  shift 57
	AND  shift 49
	.  reduce 59 (src line 331)


state 81
	binary_expr:  expr.ADD expr 
	binary_expr:  expr.DIV expr 
	binary_expr:  expr.GTE expr 
	binary_expr:  expr.GT expr 
	binary_expr:  expr.AND expr 
	binary_expr:  expr.OR expr 
	binary_expr:  expr.LT expr 
	binary_expr:  expr LT expr.    (60)
	binary_expr:  expr.LTE expr 
	binary_expr:  expr.MOD expr 
	binary_expr:  expr.MUL expr 
	binary_expr:  expr.NEQ expr 
	binary_expr:  expr.POW expr 
	binary_expr:  expr.SUB expr 
	binary_expr:  expr.EQ expr 

	ADD  shift 45
	DIV  shift 46
	MOD  shift 53
	MUL  shift 54
	POW  shift 56
	SUB  shift 57
	.  reduce 60 (src line 337)


state 82
	binary_expr:  expr.ADD expr 
	binary_expr:  expr.DIV expr 
	binary_expr:  expr.GTE expr 
	binary_expr:  expr.GT expr 
	binary_expr:  expr.AND expr 
	binary_expr:  expr.OR expr 
	binary_expr:  expr.LT expr 
	binary_expr:  expr.LTE expr 
	binary_expr:  expr LTE expr.    (61)
	binary_expr:  expr.MOD expr 
	binary_expr:  expr.MUL expr 
	binary_expr:  expr.NEQ expr 
	binary_expr:  expr.POW expr 
	binary_expr:  expr.SUB expr 
	binary_expr:  expr.EQ expr 

	ADD  shift 45
	DIV  shift 46
	MOD  shift 53
	MUL  shift 54
	POW  shift 56
	SUB  shift 57
	.  reduce 61 (src line 343)


state 83
	binary_expr:  expr.ADD expr 
	binary_expr:  expr.DIV expr 
	binary_expr:  expr.GTE expr 
	binary_expr:  expr.GT expr 
	binary_expr:  expr.AND expr 
	binary_expr:  expr.OR expr 
	binary_expr:  expr.LT expr 
	binary_expr:  expr.LTE expr 
	binary_expr:  expr.MOD expr 
	binary_expr:  expr MOD expr.    (62)
	binary_expr:  expr.MUL expr 
	binary_expr:  expr.NEQ expr 
	binary_expr:  expr.POW expr 
	binary_expr:  expr.SUB expr 
	binary_expr:  expr.EQ expr 

	POW  shift 56
	.  reduce 62 (src line 349)


state 84
	binary_expr:  expr.ADD expr 
	binary_expr:  expr.DIV expr 
	binary_expr:  expr.GTE expr 
	binary_expr:  expr.GT expr 
	binary_expr:  expr.AND expr 
	binary_expr:  expr.OR expr 
	binary_expr:  expr.LT expr 
	binary_expr:  expr.LTE expr 
	binary_expr:  expr.MOD expr 
	binary_expr:  expr.MUL expr 
	binary_expr:  expr MUL expr.    (63)
	binary_expr:  expr.NEQ expr 
	binary_expr:  expr.POW expr 
	binary_expr:  expr.SUB expr 
	binary_expr:  expr.EQ expr 

	POW  shift 56
	.  reduce 63 (src line 354)

